<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RFID Sample</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="advice">设备：</string>
    <string name="port">端口：</string>
    <string name="ip_address">/dev/ttyS3</string>
    <string name="portNumber">115200</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开</string>
    <string name="read">读卡</string>
    <string name="query">查询</string>
    <string name="clear">清除</string>
    <string name="stop">停止</string>
    <string name="connecting">连接中&#8230;</string>
    <string name="device_not_found">蓝牙未开启，未发现设备</string>
    <string name="toast_bluetooth_close">蓝牙未打开！</string>
    <string name="toast_exit">再按一次将退出应用!</string>
	<string name="alert_dialog_title">蓝牙未开启</string>
    <string name="alert_dialog_message">蓝牙处于关闭状态。是否开启？ </string>
    <string name="alert_dialog_button_yes">是</string>
    <string name="alert_dialog_button_NO">否</string>
    <string name="send_read_card_success">发送读卡指令成功</string>
    <string name="send_read_card_failed">发送读卡指令失败</string>
    <string name="stop_read_card">停止读卡成功</string>
    <string name="diss_connected">断开连接成功</string>
    <string name="connected_rebuild">连接建立33</string>
    <string name="connected_not_rebuild">连接没有建立222</string>
    <string name="net_error_msg_unknow_str">错误</string>
    <string name="timeout_str">time_out</string>
    <string name="nav_back_again_finish">再按一次退出</string>


</resources>