<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    
	<LinearLayout
        android:id="@+id/connect_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >
        
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/connecting"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginBottom="10dp" />
    </LinearLayout>    
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:padding="4dp" >

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="1dp"
	        android:orientation="horizontal"
	        android:padding="3dp" >

	        <TextView
	            android:id="@+id/adviceText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/advice" />
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">

	        <Spinner
		        android:id="@+id/deviceSpinner"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="1dp"
	        android:orientation="horizontal"
	        android:padding="3dp" >

	        <Button
	            android:id="@+id/connectBtn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="1dp"
	            android:layout_weight="1"
	            android:text="@string/connect" />

	        <Button
	            android:id="@+id/disconnectBtn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="1dp"
	            android:layout_weight="1"
	            android:text="@string/disconnect" />
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_margin="1dp"
	        android:layout_weight="1"
	        android:orientation="vertical" >

	        <ListView
	            android:id="@+id/dataSet"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_margin="1dp"
	            android:listSelector="@drawable/list_item_shape" >
	        </ListView>
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="1dp"
	        android:orientation="horizontal"
	        android:padding="3dp" >

	        <Button
	            android:id="@+id/readBtn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="1dp"
	            android:layout_weight="1"
	            android:text="@string/read" />

	        <Button
	            android:id="@+id/stopBtn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="1dp"
	            android:layout_weight="1"
	            android:text="@string/stop" />

	        <Button
	            android:id="@+id/clearButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="1dp"
	            android:layout_weight="1"
	            android:text="@string/clear" />

	        <Button
	            android:id="@+id/queryButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="1dp"
	            android:layout_weight="1"
	            android:text="@string/query" />
	    </LinearLayout>
	</LinearLayout>

</merge>
